2016-07-29 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/spec/: Add Gigabyte IANA manufacturer macro
	and Product MD90-FS0-ZB macro.

	* libfreeipmi/sel/: Add Gigabyte MD90-FS0-ZB OEM SEL support.

2016-07-29 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Support get/set-bmc-services for Intel motherboards.

2016-08-01 Albert Chu <chu11@llnl.gov>

        * Tagged freeipmi-1-5-3

        * NEWS, configure.ac: Update for release.

2016-08-01 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-sensor-common.h: Increase max sensor
	types to 128.

2016-08-01 Thomas Grohmann <thomas.grohmann@atos.net>

	* common/toolcommon/tool-sensor-common.h: Increase max record ids
	to 4096.

2016-07-11 Albert Chu <chu11@llnl.gov>

	* Document support of Intel S2600KPR.

2016-07-05 Holger Liebig <holger.liebig@ts.fujitsu.com>

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Update
	Fujitsu Product ID range.

2016-06-08 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-comp-code-spec.h: Fix
	invalid completion code values for set session privilege macros.

2016-06-06 Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole-argp.c, man/ipmiconsole.8.pre.in:
	Clarify use of --debugfile option.

	* ipmiconsole/: Make --debugfile option available in production
	builds.

2016-05-24  Albert Chu <chu11@llnl.gov>

        * NEWS, configure.ac: Update for release.

2016-05-21 Albert Chu <chu11@llnl.gov>

        * Tagged freeipmi-1-5-2

2016-05-10 Albert Chu <chu11@llnl.gov>

	* bmc-device/: Support --read-fru and --device-id option.

	* libfreeipmi/: Add ipmi_fru_open_device_id_with_buffer function.

	* ipmi-fru/: Add --fru-file option.

	* libfreeipmi/: Add ipmi_cmd_write_fru_data function.

	* bmc-device/: Support --write-fru option.

2016-05-04 Albert Chu <chu11@llnl.gov>

	* man/ipmi-fru.8.pre.in, man/bmc-device.8.pre.in: Minor fixes

2016-03-09 Maksym Planeta <mcsim.planeta@gmail.com>

	* libfreeipmi/driver/ipmi-inteldcmi-driver.c,