@@ -120,6 +120,7 @@ extern "C" {
 #include <freeipmi/spec/ipmi-system-info-parameters-spec.h>
 #include <freeipmi/spec/ipmi-system-software-id-spec.h>
 #include <freeipmi/spec/oem/ipmi-cmd-oem-dell-spec.h>
+#include <freeipmi/spec/oem/ipmi-cmd-oem-gigabyte-spec.h>
 #include <freeipmi/spec/oem/ipmi-cmd-oem-fujitsu-spec.h>
 #include <freeipmi/spec/oem/ipmi-cmd-oem-ibm-spec.h>
 #include <freeipmi/spec/oem/ipmi-cmd-oem-intel-node-manager-spec.h>
@@ -152,6 +153,7 @@ extern "C" {
 #include <freeipmi/spec/oem/ipmi-netfn-oem-wistron-spec.h>
 #include <freeipmi/spec/oem/ipmi-oem-dell-spec.h>
 #include <freeipmi/spec/oem/ipmi-oem-fujitsu-spec.h>
+#include <freeipmi/spec/oem/ipmi-oem-gigabyte-spec.h>
 #include <freeipmi/spec/oem/ipmi-oem-ibm-spec.h>
 #include <freeipmi/spec/oem/ipmi-oem-intel-spec.h>
 #include <freeipmi/spec/oem/ipmi-oem-inventec-spec.h>
